tests/typing/good/testfile-unique-1.c
int main() {
  int x;
  if (1) { int x; }
}
