tests/typing/bad/testfile-undef_var-2.c

int main() { int x; }
int n() { x; }
